theme/static/css/hydroshare_core.css
/* ... */
#permission-panel #id_user-autocomplete{
    width: 100%;
    height: 100%;
    border: 0;
    padding: 0px 4px;
}

span.hilight {
    background: #EEE;
    width: 100%;
    height: 100%;
    display: block;
}

#form-sharing{
    margin-top: -6px;
    margin-left: 5px;
    margin-right: 5px;
}

.file-icon{
    margin-right: 5px;
    font-size: 28px;
    color: #8c8c8c;
    float:left;
    top: 6px;
}

table.table-plain {
    margin-bottom: 10px;
    width:100%;
}

table.table-plain td{
    padding-right: 10px;
}

.tab-elements{
    border:0;
}

.tab-elements > .panel-tabs > .nav-tabs{
    margin-bottom: 0;
    border:0;
}

.panel-tabs > .nav-tabs > li > a{
    color:#555;
    -webkit-border-radius: 4px 4px 0 0;
    -moz-border-radius: 4px 4px 0 0;
    border-radius: 4px 4px 0 0;
    -webkit-box-shadow: inset 0 1px 0 #ffffff;
    -moz-box-shadow: inset 0 1px 0 #ffffff;
    box-shadow: inset 0 1px 0 #ffffff;
}
.tab-elements > .tabs-body{
    max-height: 400px;
    min-height: 150px;
    border: 1px solid #ddd;
    padding: 10px;
    overflow: auto;
}

.panel-tabs table>tbody>tr>th{
    border:0;
}

.division-title {
    clear:left;
    font-size: 20px;
    font-weight: 500;
    margin-left: 7px;
    background-color: #FFF !important;

}

.page-title{
    font-weight: 500;
    margin: 30px 0px;
    margin-top: 10px;
}

.label-file-name{
    font-weight: bold;
}

.label-file-size{
    font-size:12px;
    margin-bottom: 0;
}

.table-plain > tbody > tr{
    /*border-bottom: 1px solid #ddd;*/
}

.table-plain > tbody > tr:last-child{
    border:none;
}


body > .container{
    /*Substract the height of the footer*/
    min-height: calc(100% - 277px);
    padding-top: 20px;
    /*background: #FFF;*/
    /*margin-top: 20px;*/
    /*border-radius: 5px;*/
    /*box-shadow: 0px 0px 5px #B5B5B5;*/
}

.icon-button {
    font-size: 22px;
    cursor: pointer;
    float: right;
    margin: 0 4px;

    padding: 5px;
    background-color: transparent;
    width: auto !important;

}

.custom-btn-toolbar .icon-button{
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    border-radius: 3px;
    background-color: #FFF;
    border: 1px solid#adadad;

}

.custom-btn-toolbar .icon-button:hover {
    box-shadow: 0px 0px 5px #B2B2B2;
}


.custom-btn-toolbar{
    display: block;
    float: right;
    background: #F5F5F5;
    height: auto;
    padding: 8px 4px;
    border: 1px solid #D3D3D3;
    -webkit-border-radius: 6px;
}

.cc-image{
    width:88px;
    height:31px;
}

#permission-panel{
    margin-top:20px;
}


#permission-panel .custom-well{
    height: 235px;
    background: #F7F7F7;
}

#permission-panel h5{
    margin-top:0;
}

.info-icon{
    color:#B6B6B6;
    margin-top: 4px;
    margin-left: -4px;
    position: absolute;
}

.info-icon:hover{
    color: #777;
}

.btn-update-list{
    margin-top:4px;
    margin-right:4px;
    margin-bottom:4px;
    width: 100%;
}

.btn-add-access{
    -webkit-border-radius: 0px;
    -webkit-border-top-left-radius: 3px;
    -webkit-border-bottom-left-radius: 3px;
    -moz-border-radius: 0px;
    -moz-border-radius-topleft: 3px;
    -moz-border-radius-bottomleft: 3px;
    border-radius: 0px;
    border-top-left-radius: 3px;
    border-bottom-left-radius: 3px;
}

.abstract{
    /*line-height: 2;*/
    /*font-size: 16px;*/
}

.button-label{
    font-family: Lato, sans-serif;
}

.btn-remove{
    color:#d9534f;
}

.btn-edit, .btn-share{
    color: #428BD2;
}

.btn-download{
    color:#428bca;
}

.content-block{
    margin-bottom:5px;
    display: table;
    width:100%;
}

.sharing-public{
    border: 1px solid #6E6E6E;
    padding: 3px 6px;
    background: #5CB85C;
    color: #FFF;
    margin: 3px;
    border-radius: 15px
}

.sharing-private{
    border: 1px solid #6E6E6E;
    padding: 3px 6px;
    background: #D9534F;
    color: #FFF;
    margin: 3px;
    border-radius: 3px;
}
.citation-label {
    float:left;
    font-weight: bold;
}

#citation-text {
    display: inline-block;
    float: left;
    /*font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;*/
    /*margin-left:10px;*/
    /*width:90%;*/
}

.rights-text, .rights-url{
    /*font-style:italic;*/
}

#rights{
    /*margin-top: 50px;*/
    /*margin-bottom:10px;*/
}

div#sharing-status {
    height: 34px;
}

.info-group {
    margin-top: -20px;
}

.tag-list {
    margin: 0;
    list-style: none;
    padding: 10px 10px 5px 10px !important;
}

.tag {
    display: inline-block;
    margin-bottom: 4px;
    color: #111111;
    background-color: #f6f6f6;
    padding: 1px 10px;
    border: 1px solid #dddddd;
    -webkit-border-radius: 15px;
    -moz-border-radius: 15px;
    border-radius: 15px;
    -webkit-box-shadow: inset 0 1px 0 #ffffff;
    -moz-box-shadow: inset 0 1px 0 #ffffff;
    box-shadow: inset 0 1px 0 #ffffff;
    /*cursor:pointer;*/
}

.tag-list li {
    display: inline-block;
    margin-right: 5px;
}

a.tag:hover {
    text-decoration: none;
    cursor:default;
    /*color: #fff;*/
    /*background-color: #30778d;*/
    /*border: 1px solid #235767;*/
    /*-webkit-box-shadow: inset 0 1px 0 #3d97b3;*/
    /*-moz-box-shadow: inset 0 1px 0 #3d97b3;*/
    /*box-shadow: inset 0 1px 0 #3d97b3;*/
}

.user-thumbnail{
    border: 1px solid #DDD;
    border-radius: 3px;
    height: 170px;
    margin: 5px;
    display: inline-block;
    float: left;
    padding: 10px;
    font-size: 12px;
    -webkit-box-shadow: inset 0 1px 0 #ffffff;
    -moz-box-shadow: inset 0 1px 0 #ffffff;
    box-shadow: inset 0 1px 0 #ffffff;
    box-shadow: 1px 1px 8px #DFDFDF;
    color:#555;
}

.table-container {
    max-height: 300px;
    overflow: auto;
    margin-bottom: 20px;
    border: 1px solid #ddd;
    padding: 5px 10px;
}

.header-row{
    border-bottom:1px solid #ddd;
}

.custom-well{
    min-height: 20px;
    padding: 19px;
    margin-bottom: 20px;
    border: 1px solid #e3e3e3;
    border-radius: 4px;
    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.05);
    box-shadow: inset 0 1px 1px rgba(0,0,0,0.05);
}
/* ... */

